# query-patterns

./: README.md  pyproject.toml  tox.ini
examples/django_example/: README.md  bootstrap_and_run.py  settings.py
examples/django_example/app/: models.py  repo.py
examples/sqlalchemy_example/: README.md  orm.py  repo.py
query_patterns/: __init__.py  analyze.py  collect.py  decorator.py  pattern.py  types.py  utils.py
query_patterns/cli/: main.py
query_patterns/cli/command/: django.py  sqlalchemy.py
query_patterns/cli/runner/: base.py  django.py  sqlalchemy.py  types.py
query_patterns/cli/tools/: django.py  sqlalchemy.py  types.py
tests/: test_analyze.py  test_auto_discover.py  test_cli_django.py  test_cli_sqlalchemy.py  test_collect.py  test_collect_patterns.py  test_core.py  test_decorator.py  test_smoke.py
tests/cli/: conftest.py  test_base_runner.py  test_django.py  test_sqlalchemy.py
